# GainPlugin

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
Source/: GainPlugin.cpp  GainPlugin.h  GainPluginEditor.cpp  GainPluginEditor.h  GainPluginProcessor.cpp  GainPluginProcessor.h
cmake/: CompilerWarnings.cmake  Util.cmake  cpm.cmake
plugin/: CMakeLists.txt
plugin/include/gain/: Knob.h  PluginEditor.h  PluginProcessor.h
plugin/resources/icons/: Gain.icns
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/src/: PluginEditorTest.cpp  PluginProcessorTest.cpp  tests_main.cpp
